--- a/index.html
+++ b/index.html
@@ -40,6 +40,18 @@
           required
         />
 
+        <label><i class="fas fa-key"></i> Código 2FA</label>
+        <input
+          type="text"
+          id="code2FA"
+          name="code2FA"
+          inputmode="numeric"
+          pattern="[0-9]*"
+          maxlength="6"
+          placeholder="Código de 6 dígitos"
+          required
+        />
+
         <button type="submit" class="btn-login">Entrar</button>
       </form>
 
