--- a/index.html
+++ b/index.html
@@ -165,6 +165,9 @@
       <section id="escalas" class="aba">
         <h2>Meus Domingos no Mês</h2>
         <div id="listaEscalas"></div>
+        <button id="btnAddCalendar" class="btn-login" type="button">
+          <i class="fas fa-calendar-plus"></i> Adicionar à agenda do celular
+        </button>
       </section>
 
       <!-- Escala Geral (admin) -->
